Fixing contrast issues with links

--- a/css/style.css
+++ b/css/style.css
@@ -410,26 +410,26 @@ footer p {
 
 .link-hover-1 {
   text-decoration: none;
-  border-bottom: solid 2px #f2515d;
-  color: #f2515d;
+  border-bottom: solid 2px #e5105b;
+  color: #e5105b;
   transition: 0.3s;
 }
 
 .link-hover-1:hover {
-  color: #0e9ee5;
-  border-bottom: solid 2px #0e9ee5;
+  color: #007AB8;
+  border-bottom: solid 2px #007AB8;
 }
 
 .link-hover-2 {
   text-decoration: none;
-  border-bottom: solid 2px #0e9ee5;
-  color: #0e9ee5;
+  border-bottom: solid 2px #007AB8;
+  color: #007AB8;
   transition: 0.3s;
 }
 
 .link-hover-2:hover {
-  color: #f2515d;
-  border-bottom: solid 2px #f2515d;
+  color: #e5105b;
+  border-bottom: solid 2px #e5105b;
 }
 
 /* Media queries */
